fix: created grid spacing for increasing numbers on mobile

--- a/app/(pages)/(index-page)/about-us/_components/Sponsor/Sponsor.module.scss
+++ b/app/(pages)/(index-page)/about-us/_components/Sponsor/Sponsor.module.scss
@@ -10,6 +10,7 @@
   position: relative;
   overflow: hidden;
   gap: 88px;
+
 }
 
 .content {
@@ -24,6 +25,11 @@
     flex-direction: column-reverse;
     align-items: center;
     margin: 88px 88px 0 88px;
+  }
+
+  @include mixins.phone {
+    margin: 58px 58px 0 58px;
+
   }
 }
 
@@ -40,6 +46,7 @@
     gap: 64px;
     width: 75%;
   }
+
 }
 
 .text-container {
@@ -48,9 +55,9 @@
   gap: 32px;
   max-height: fit-content;
   width: 100%;
-
+  
   @include mixins.phone {
-    width: 100%;
+    width: 120%;
   }
 }
 
@@ -61,6 +68,11 @@
   flex-wrap: wrap;
   gap: 64px;
   justify-content: center;
+
+  @include mixins.phone {
+    flex-direction: row;
+
+  }
 }
 
 .number-word-pair {
@@ -69,6 +81,11 @@
   align-items: center;
   width: fit-content;
   height: fit-content;
+
+  @include mixins.phone {
+    width: 30%;
+
+  }
 }
 
 .number {
@@ -83,8 +100,14 @@
   margin-right: 24px;
 
   @include mixins.phone {
-    font-size: 2.5rem;
-    letter-spacing: 0.8px;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%; /* 54px */
+    letter-spacing: 0.72px;
+    text-transform: lowercase;
+    margin-right: 0px;
+
   }
 }
 
@@ -99,11 +122,15 @@
   line-height: 150%;
   letter-spacing: 0.56px;
   text-transform: lowercase;
-  height: 5rem;
+  // height: 5rem;
 
   @include mixins.phone {
-    font-size: 1.5rem;
-    letter-spacing: 0.48px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%; /* 24px */
+  letter-spacing: 0.32px;
+  text-transform: lowercase;
   }
 }
 
@@ -118,6 +145,11 @@
   flex-shrink: 0;
   border-radius: 6.25rem;
   background: #FFC53D;
+
+  @include mixins.phone {
+    width: 100%;
+
+  }
 }
 
 .button-words{
